# axum_auto_admin

./: .gitignore  Cargo.toml  README.md
axum_auto_admin/: Cargo.toml
axum_auto_admin/src/: lib.rs
axum_auto_admin_derive/: Cargo.toml
axum_auto_admin_derive/src/: lib.rs
examples/example_basic/: Cargo.toml
examples/example_basic/src/: main.rs
