[package]
name = "example_basic"
version = "0.1.0"
edition = "2021"

[dependencies]
axum_auto_admin_derive = { path = "../../axum_auto_admin_derive" }
axum_auto_admin = { path = "../../axum_auto_admin" }
axum = "0.7.9"
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"